--- a/SearcheyMcSearchface/Views/Shared/_SearchResult.cshtml
+++ b/SearcheyMcSearchface/Views/Shared/_SearchResult.cshtml
@@ -10,10 +10,12 @@
 
     <div class="row">
         Tags:
-
-        @foreach (string tag in @Model.Tags)
+        @if (@Model.Tags != null)
         {
-            <div class="col-sm-offset-1">@tag</div>
+            foreach (string tag in @Model.Tags)
+            {
+                <div class="col-sm-offset-1">@tag</div>
+            }
         }
     </div>
     <br />
