--- a/SearcheyMcSearchface/Views/Home/Index.cshtml
+++ b/SearcheyMcSearchface/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
 }
 
 <div class="jumbotron">
-    <h1>Searchy McSearchFace</h1>
+    <h2>Searchy McSearchFace</h2>
+
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Getting started</h3>
+                <p class="small">
+                    Searchy McSearchface searches text, relations and tags (keywords) in all Fourth (Adaco) wikis and documents
+                </p>
+            </div>
+        </div>
 </div>
 
 @Html.Partial("_Search", new SearchViewModel())
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            Searchy McSearchface searches text, relations and tags (keywords) in all Fourth (Adaco) wikis and documents
-        </p>
-    </div>
-</div>
