--- a/SearcheyMcSearchface/Views/Shared/_Search.cshtml
+++ b/SearcheyMcSearchface/Views/Shared/_Search.cshtml
@@ -10,10 +10,11 @@
 
     @if (Model.Results != null)
     {
-        <div>Results for @Model.Text :</div>
-        foreach (var result in Model.Results)
+        <div style="margin-top: 50px;">
+        @foreach (var result in Model.Results)
         {
-            @Html.Partial("_SearchResult", result)
+            @Html.Partial("_SearchResult", result);
         }
+        </div>
     }
 </div>
