--- a/SearcheyMcSearchface/Views/Shared/_SearchResult.cshtml
+++ b/SearcheyMcSearchface/Views/Shared/_SearchResult.cshtml
@@ -1,12 +1,10 @@
 ﻿@model SearcheyMcSearchface.Models.SearchResultViewModel
 
-<div>
-    <div class="caption">
-        Header: @Model.Header
-    </div>
-    <div class="caption">
-        Text: @Model.Text
-    </div>
+<div class="panel">
+    <p class="small text-primary text-uppercase" style="text-transform: uppercase;">
+        @Model.Header
+    </p>
+    <div class="small text-muted">@Model.Text</div>
     @Html.Partial("_Tags", @Model.Tags)
     @Html.ActionLink("Show More...", "Index", new { controller = "Document", Id = @Model.DocumentId }, new { target = "_blank" })
     <hr />
