--- a/SearcheyMcSearchface/Views/Home/Index.cshtml
+++ b/SearcheyMcSearchface/Views/Home/Index.cshtml
@@ -4,16 +4,15 @@
 }
 
 <div class="jumbotron">
-    <h2>Searchy McSearchFace</h2>
+    <h2>Searchy McSearchface</h2>
 
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Getting started</h3>
-                <p class="small">
-                    Searchy McSearchface searches text, relations and tags (keywords) in all Fourth (Adaco) wikis and documents
-                </p>
-            </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h4 class="small">
+                Searchy McSearchface searches text, relations and tags (keywords) in all Fourth (Adaco) wikis and documents
+            </h4>
         </div>
+    </div>
 </div>
 
 @Html.Partial("_Search", new SearchViewModel())
