--- a/SearcheyMcSearchface/Views/Tags/Index.cshtml
+++ b/SearcheyMcSearchface/Views/Tags/Index.cshtml
@@ -14,12 +14,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Text)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TermFrequency)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TfIdf)
-        </th>
         <th></th>
     </tr>
 
@@ -29,15 +23,7 @@
             @Html.DisplayFor(modelItem => item.Text)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TermFrequency)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TfIdf)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Details", "Details", new { id=item.Id }, new {@class="btn btn-info"}) 
         </td>
     </tr>
 }
